deployment/02-deployment-with-ClusterIP/filemanagement-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filemanagementapi-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: filemanagementapi
  template:
    metadata:
      labels:
        app: filemanagementapi
    spec:
      containers:
      - name: filemanagementapi-container
        image: radhey24h/filemanagementapi:0.0.1
        ports:
        - containerPort: 3202
---
apiVersion: v1
kind: Service
metadata:
  name: filemanagementapi-service
spec:
  selector:
    app: filemanagementapi
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3202
  type: ClusterIP
