deployment/02-deployment-with-ClusterIP/ingressController.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /userapi
        pathType: Prefix
        backend:
          service:
            name: userapi-service
            port:
              number: 80
      - path: /mailerapi
        pathType: Prefix
        backend:
          service:
            name: mailerapi-service
            port:
              number: 80
      - path: /fileapi
        pathType: Prefix
        backend:
          service:
            name: fileapi-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
